# mirai_j4rs

./: .gitignore  Cargo.toml  README.md  demo.md
crates/mj_closures/: Cargo.toml
crates/mj_closures/src/: comparator.rs  consumer.rs  ffi_internal_test.rs  function.rs  kt_func_0.rs  kt_func_1.rs  kt_func_2.rs  predicate.rs
crates/mj_internal/: Cargo.toml
crates/mj_internal/src/: file.rs  lib.rs
crates/mj_internal/src/auth/: bot_authorization.rs  mod.rs
crates/mj_internal/src/contact/: anonymous_member.rs  bot.rs  contact.rs  contact_trait.rs  friend.rs  group.rs  member.rs  mod.rs  normal_member.rs  other_client.rs  stranger.rs  user.rs
crates/mj_internal/src/contact/file/: absolute_file.rs  absolute_file_folder.rs  absolute_folder.rs  external_resource.rs  remote_files.rs  traits.rs
crates/mj_internal/src/error/: mod.rs
crates/mj_internal/src/event/: bot.rs  event.rs  event_channel.rs  event_trait.rs  friend.rs  group.rs  listener.rs  message.rs  mod.rs
crates/mj_internal/src/event/events/: before_image_upload.rs  before_short_video_upload.rs  bot_avatar_changed.rs  bot_group_permission_change.rs  bot_invited_join_group_request.rs  bot_join_group.rs  bot_leave.rs  bot_mute.rs  bot_nick_changed.rs  bot_offline.rs  bot_online.rs  bot_relogin.rs  bot_unmute.rs  friend_add.rs  friend_avatar_changed.rs  friend_delete.rs  friend_input_status_changed.rs  friend_message_post_send.rs  friend_message_pre_send.rs  friend_nick_changed.rs  friend_remark_change.rs  group_allow_anonymous_chat.rs  group_allow_confess_talk.rs  group_allow_member_invite.rs  group_entrance_announcement_change.rs  group_message_post_send.rs  group_message_pre_send.rs  group_mute_all.rs  group_mute_all_change.rs  group_name_change.rs  group_talkative_change.rs  group_temp_message_post_send.rs  group_temp_message_pre_send.rs  image_upload_event.rs  member_card_change.rs  member_honor_change.rs  member_join.rs  member_join_request_event.rs  member_leave.rs  member_mute.rs  (+17 more)
crates/mj_internal/src/event/events/message/: friend_message.rs  friend_message_sync.rs  group_message.rs  group_message_sync.rs  group_temp_message.rs  group_temp_message_post_send.rs  group_temp_message_pre_send.rs  group_temp_message_sync.rs  image_upload_event.rs  message_recall.rs  mod.rs  other_client_message.rs  other_client_message_post_send.rs  other_client_message_pre_send.rs  stranger_message.rs  stranger_message_post_send.rs  (+2 more)
crates/mj_internal/src/event/traits/: bot.rs  event.rs  friend.rs  group.rs  message.rs  mod.rs  other_client.rs  stranger.rs  user.rs
crates/mj_internal/src/message/: message_receipt.rs  message_trait.rs  mod.rs
crates/mj_internal/src/message/action/: mod.rs  nudges.rs
crates/mj_internal/src/message/data/: at.rs  at_all.rs  audio.rs  dice.rs  face.rs  file_message.rs  forward_message.rs  image.rs  light_app.rs  market_face.rs  message_chain.rs  message_origin.rs  message_source.rs  mod.rs  music_share.rs  plain_text.rs  poke_message.rs  quote_reply.rs  rock_paper_scissors.rs  single_message.rs  super_face.rs  unsupported_message.rs  vip_face.rs
crates/mj_internal/src/utils/: backend.rs  bot_builder.rs  bot_configuration.rs  data_wrapper.rs  device_info.rs  env.rs  just_for_examples.rs  login_solver.rs  mirai_list.rs  mirai_logger.rs  mirai_map.rs  mod.rs  other.rs
crates/mj_internal/src/utils/contact/: contact_list.rs  friend_group.rs  mod.rs
crates/mj_tests/: Cargo.toml
crates/mj_tests/src/: lib.rs
crates/mj_tests/tests/: listen.rs  login.rs  messages.rs  template.rs
(+155 files in other folders)
