[package]
name = "mirai_j4rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
resolver = "2"
edition = "2021"
members = [
    "crates/mj_*", "examples/*",
]
default-members = ["crates/mj_*"]

[dependencies]
mj_internal = { path = "crates/mj_internal" }
mj_base = { path = "crates/mj_base" }
mj_error = { path = "crates/mj_error" }


[workspace.dependencies]
j4rs = "0.20"
j4rs_derive = "0.1"
jbuchong = { git = "https://github.com/worksoup/jbuchong.git" }
