[package]
name = "mj_closures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = { git = "https://github.com/astonbitecode/j4rs.git" }
j4rs_derive = { git = "https://github.com/astonbitecode/j4rs.git" }
mj_base = { path = "../mj_base" }
mj_macro = { path = "../mj_macro" }
