[package]
name = "mj_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"] # cdylib 供 jvm_side 使用。

[dependencies]
mj_macro = { path = "../mj_macro" }
mj_base = { path = "../mj_base" }
mj_closures = { path = "../mj_closures" }
j4rs = "0.17"
j4rs_derive = "0.1"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4"
regex = "1.10"
fs_extra = "1.3"
# thiserror = "1.0"
# directories = "5.0"
# num_cpus = "^1.15"
# rust-crypto = "^0.2"
# ring = "^0.16"
# once_cell = "^1.16"