[package]
name = "mj_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirai_j4rs = { path = "../mj" }
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"