[package]
name = "mj_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirai_j4rs = { path = "../../." }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ctrlc = "3.4"